# SDLChessGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindSDL2.cmake
src/: bishop.cpp  bishop.h  chessBoard.cpp  chessBoard.h  gameLoop.cpp  gameLoop.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h  promotionWindow.cpp  promotionWindow.h  queen.cpp  queen.h  rook.cpp  rook.h  sdlHandler.cpp  sdlHandler.h  slidingPiece.h
